# local-search-engine

./: .envrc.example  .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: architecture.md  binary_format.md  bugfix_plan.md  ranker_design.md
src/: main.cpp
src/core/: CMakeLists.txt  book_indexer.cpp  book_indexer.hpp  core.cpp  lse_core.hpp
src/core/chunker/: chunker.cpp  chunker.hpp
src/core/index/: in_memory_index.cpp  in_memory_index.hpp  index_common.hpp  index_reader.cpp  index_reader.hpp  index_writer.cpp  index_writer.hpp  memory_mapped_file.cpp  memory_mapped_file.hpp
src/core/parser/: docx_parser.cpp  docx_parser.hpp  fb2_parser.cpp  fb2_parser.hpp  filename_parser.cpp  filename_parser.hpp  genre_mapper.cpp  genre_mapper.hpp  txt_parser.cpp  txt_parser.hpp
src/core/remote/: manticore_client.cpp  manticore_client.hpp  manticore_config.cpp  manticore_config.hpp
src/core/search/: query_builder.cpp  query_builder.hpp  query_node.hpp  query_parser.cpp  query_parser.hpp  query_type.hpp  search_engine.cpp  search_engine.hpp
src/core/tokenizer/: stemmer.cpp  stemmer.hpp  tokenizer.cpp  tokenizer.hpp
src/ui/: CMakeLists.txt  ResultDelegate.qml  SearchBar.qml  main.cpp  main.qml  main_window.cpp  main_window.hpp  qml.qrc  results_widget.cpp  results_widget.hpp  search_widget.cpp  search_widget.hpp
tests/: CMakeLists.txt  test_chunker.cpp  test_docx_parser.cpp  test_fb2_parser.cpp  test_filename_parser.cpp  test_genre_mapper.cpp  test_in_memory_index.cpp  test_index_persistence.cpp  test_main.cpp  test_memory_mapped_file.cpp  test_query_builder.cpp  test_query_parser.cpp  test_search_engine.cpp  test_stemmer.cpp  test_tokenizer.cpp  test_txt_parser.cpp
